<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.nc</groupId>
	<artifactId>cedar-java</artifactId>
	<version>1.0.0</version>
	<name>${project.groupId}::${project.artifactId}</name>

	<properties>
		<java.version>18</java.version>
		<junit.version>4.13.1</junit.version>
		<plugins.compiler.version>3.8.1</plugins.compiler.version>
		<plugins.resource.version>3.1.0</plugins.resource.version>
		<plugins.surefire.version>3.0.0-M5</plugins.surefire.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<defaultGoal>install</defaultGoal>
		<directory>${basedir}/target</directory>
		<finalName>${project.artifactId}-${project.version}</finalName>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
			</plugin>
		</plugins>

		<resources>
			<resource>
				<directory>${basedir}/src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>${basedir}/src/test/resources</directory>
				<filtering>true</filtering>
			</testResource>
		</testResources>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<version>${plugins.resource.version}</version>
					<configuration>
						<nonFilteredFileExtensions>
							<nonFilteredFileExtension>bin</nonFilteredFileExtension>
							<nonFilteredFileExtension>cert</nonFilteredFileExtension>
							<nonFilteredFileExtension>css</nonFilteredFileExtension>
							<nonFilteredFileExtension>dae</nonFilteredFileExtension>
							<nonFilteredFileExtension>dll</nonFilteredFileExtension>
							<nonFilteredFileExtension>eot</nonFilteredFileExtension>
							<nonFilteredFileExtension>exe</nonFilteredFileExtension>
							<nonFilteredFileExtension>glb</nonFilteredFileExtension>
							<nonFilteredFileExtension>gltf</nonFilteredFileExtension>
							<nonFilteredFileExtension>jasper</nonFilteredFileExtension>
							<nonFilteredFileExtension>jks</nonFilteredFileExtension>
							<nonFilteredFileExtension>js</nonFilteredFileExtension>
							<nonFilteredFileExtension>less</nonFilteredFileExtension>
							<nonFilteredFileExtension>lib</nonFilteredFileExtension>
							<nonFilteredFileExtension>map</nonFilteredFileExtension>
							<nonFilteredFileExtension>otf</nonFilteredFileExtension>
							<nonFilteredFileExtension>png</nonFilteredFileExtension>
							<nonFilteredFileExtension>so</nonFilteredFileExtension>
							<nonFilteredFileExtension>svg</nonFilteredFileExtension>
							<nonFilteredFileExtension>ttf</nonFilteredFileExtension>
							<nonFilteredFileExtension>woff</nonFilteredFileExtension>
							<nonFilteredFileExtension>woff2</nonFilteredFileExtension>
						</nonFilteredFileExtensions>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${plugins.compiler.version}</version>
					<configuration>
						<encoding>${project.build.sourceEncoding}</encoding>
						<source>${java.version}</source>
						<target>${java.version}</target>
						<fork>false</fork>
						<compilerArgs>
							<arg>--enable-preview</arg>
							<arg>--add-modules</arg>
							<arg>jdk.incubator.foreign</arg>
							<arg>--add-exports</arg>
							<arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
						</compilerArgs>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${plugins.surefire.version}</version>
					<configuration>
						<argLine>--enable-preview --add-modules jdk.incubator.foreign --add-opens java.base/jdk.internal.misc=ALL-UNNAMED -Xmx1g</argLine>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>

	</dependencies>
</project>
